from Entidade import Entidade

class Milkshake(Entidade):

    descricao = ["preco", "principal", "leite", "cobertura", "capacidade"]
    ingredientes = ["principal", "leite", "cobertura"]

    def __init__(self):
       pass