from Entidade import Entidade

class Pizza(Entidade):

    descricao = ["preco", "principal", "massa", "queijo", "borda"]
    ingredientes = ["principal", "massa", "queijo"]
    
    def __init__(self):
       pass