from Entidade import Entidade

class Sanduiche(Entidade):

    descricao = ["preco", "pao", "proteina", "verdura", "queijo", "extra"]
    ingredientes = ["pao", "proteina", "verdura", "queijo", "extra"]
    
    def __init__(self):
       pass